--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "This is online meeting application.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node server"
   },
   "author": "Sourav Santra",
   "license": "MIT",
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "peer": "^0.5.3",
+    "peerjs": "^1.3.1",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.0"
   }
